# utilidades

./: Descarga SECOP.ipynb  langchain.ipynb  pyproject.toml
