[project]
name = "gpcd2025"
version = "0.0.0"
description = "Proyecto Gerencia en ciencia de datos"
authors = [
    {name = "izainea",email = "cizaineam@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
